# strands_3d_mapping

calibrate_sweeps/src/: calibrate_sweep_action_server.cpp
cloud_merge/: CMakeLists.txt  package.xml
cloud_merge/include/cloud_merge/: cloud_merge_node.h
ekz-public-lib/src/FeatureExtractor/: OrbExtractor.cpp
learn_objects_action/launch/: learn_objects_dependencies.launch
learn_objects_action/src/learn_objects_action/: metric_sweep.py  ptu_track.py
metaroom_xml_parser/include/metaroom_xml_parser/: load_utilities.hpp  simple_dynamic_object_parser.h  simple_xml_parser.h
metaroom_xml_parser/src/: simple_summary_parser.cpp
object_manager/: CMakeLists.txt  package.xml
object_manager/include/object_manager/: dynamic_object.h  object_manager.h
object_manager/src/: dynamic_object.cpp  dynamic_object_compute_mask_server.cpp  dynamic_object_utilities.cpp
object_manager_msgs/: CMakeLists.txt  package.xml
object_view_generator/scripts/: view_points_service.py
observation_registration/siftgpu/: CMakeLists.txt
quasimodo/quasimodo_brain/: CMakeLists.txt  package.xml
quasimodo/quasimodo_brain/launch/: modelserver.launch  segmentation.launch  segmentationserver.launch
quasimodo/quasimodo_brain/src/: AnnotationTool.cpp  AnnotationTool2.cpp  bayesTest.cpp  camera_opt.cpp  fb_map_node.cpp  fb_node.cpp  mergeAllSegments.cpp  metaroom_additional_view_processing.cpp  metaroom_additional_view_processing.cpp.autosave  modelserver.cpp  mr_segment_dynamic_clusters.cpp  pcl_multivisualizer.cpp  preload_object_data.cpp  robot_listener.cpp  segment_room_pairs.cpp  segmentationserver.cpp  synthetic_test.cpp  synthetic_test_visual.cpp  test_align2.cpp  test_segment.cpp  test_segment_room_pairs.cpp  velodyne2.cpp  voPCD.cpp  zoomer.cpp
quasimodo/quasimodo_brain/src/CameraOptimizer/: CameraOptimizer.cpp  CameraOptimizer.h  CameraOptimizerGrid.cpp  CameraOptimizerGrid.h  CameraOptimizerGridXY.cpp  CameraOptimizerGridXY.h  CameraOptimizerGridXYZ.cpp  CameraOptimizerGridXYZ.h
quasimodo/quasimodo_brain/src/ModelDatabase/: ModelDatabase.cpp  ModelDatabase.h  ModelDatabaseBasic.cpp  ModelDatabaseBasic.h  ModelDatabaseRGBHistogram.cpp  ModelDatabaseRGBHistogram.h  ModelDatabaseRetrieval.cpp  ModelDatabaseRetrieval.h
quasimodo/quasimodo_brain/src/ModelStorage/: ModelStorage.cpp  ModelStorage.h  ModelStorageFile.cpp  ModelStorageFile.h
quasimodo/quasimodo_brain/src/Util/: Util.cpp  Util.h
quasimodo/quasimodo_conversions/include/quasimodo_conversions/: conversions.h
quasimodo/quasimodo_conversions/src/quasimodo_conversions/: conversions.cpp
quasimodo/quasimodo_launch/launch/: quasimodo.launch
quasimodo/quasimodo_models/: CMakeLists.txt
quasimodo/quasimodo_models/include/core/: Camera.h  Descriptor.h  DescriptorExtractor.h  DescriptorExtractorORB.h  DescriptorExtractorSURF.h  DescriptorORB.h  KeyPoint.h  OcclusionScore.h  RGBDFrame.h  ReprojectionResult.h  Util.h  quasimodo_point.h  superpoint.h
quasimodo/quasimodo_models/include/model/: Model.h  ModelMask.h
quasimodo/quasimodo_models/include/modelupdater/: ModelUpdater.h
quasimodo/quasimodo_models/include/registration/: .MassRegistrationPPR2.h.swp  MassRegistration.h  MassRegistrationPPR2.h  MassRegistrationPPR3.h  MassRegistrationRecursive.h  Registration.h  RegistrationRandom.h  RegistrationRefinement.h  RegistrationRefinement2.h  RegistrationRefinement3.h  nanoflann.hpp
quasimodo/quasimodo_models/include/weightfunctions/: DistanceWeightFunction2.h  DistanceWeightFunction2JointDist.h  DistanceWeightFunction2PPR.h  DistanceWeightFunction2PPR2.h  DistanceWeightFunction2PPR3.h  DistanceWeightFunction2PPR4.h  DistanceWeightFunction2Tdist.h  Distribution.h  GaussianDistribution.h  GeneralizedGaussianDistribution.h  SignalProcessing.h
quasimodo/quasimodo_models/src/core/: Camera.cpp  Descriptor.cpp  DescriptorExtractor.cpp  DescriptorExtractorORB.cpp  DescriptorExtractorSURF.cpp  DescriptorORB.cpp  KeyPoint.cpp  OcclusionScore.cpp  RGBDFrame.cpp  ReprojectionResult.cpp  Util.cpp  organized_edge_detection.h  organized_edge_detection.hpp  superpoint.cpp
quasimodo/quasimodo_models/src/model/: Model.cpp  ModelMask.cpp
quasimodo/quasimodo_models/src/modelupdater/: ModelUpdater.cpp  ModelUpdaterBasicFuse.cpp
quasimodo/quasimodo_models/src/registration/: MassRegistration.cpp  MassRegistrationPPR.cpp  MassRegistrationPPR2.cpp  MassRegistrationPPR3.cpp  MassRegistrationRecursive.cpp  Registration.cpp  RegistrationRandom.cpp  RegistrationRefinement.cpp  RegistrationRefinement2.cpp  RegistrationRefinement3.cpp
quasimodo/quasimodo_models/src/weightfunctions/: DistanceWeightFunction2.cpp  DistanceWeightFunction2JointDist.cpp  DistanceWeightFunction2PPR.cpp  DistanceWeightFunction2PPR2.cpp  Distribution.cpp  (+6 more)
quasimodo/quasimodo_msgs/: CMakeLists.txt
quasimodo/quasimodo_msgs/msg/: model.msg  rgbd_frame.msg
quasimodo/quasimodo_msgs/srv/: metaroom_pair.srv  recognize.srv  segment_model.srv
quasimodo/quasimodo_object_search/: CMakeLists.txt  package.xml
quasimodo/quasimodo_object_search/launch/: object_search.launch
quasimodo/quasimodo_object_search/scripts/: insert_object_server.py  remove_all_models.py
quasimodo/quasimodo_object_search/src/: visualize_database_node.cpp
quasimodo/quasimodo_retrieval/: CMakeLists.txt
quasimodo/retrieval_processing/src/: retrieval_segmentation.cpp  retrieval_simulate_observations.cpp
semantic_map/: CMakeLists.txt
semantic_map/include/semantic_map/: room.h  room.hpp  room_xml_parser.hpp  semantic_map_node.h
semantic_map/launch/: semantic_map.launch
semantic_map/src/: reg_transforms.cpp  semantic_map_main.cpp  semantic_map_recompute.cpp
semantic_map_launcher/launch/: semantic_map.launch
semantic_map_msgs/: CMakeLists.txt  package.xml
strands_sweep_registration/include/: Camera.h
strands_sweep_registration/include/strands_sweep_registration/: Camera.h  Frame.h  ProblemFrameConnection.h  RobotContainer.h
strands_sweep_registration/src/: Camera.cpp  Frame.cpp  PixelFunction.cpp  ProblemFrameConnection.cpp  RobotContainer.cpp  Sweep.cpp  pair3DError.cpp  util.cpp
(+7 files in other folders)
